--- a/client/src/components/Auth/Auth.css
+++ b/client/src/components/Auth/Auth.css
@@ -7,7 +7,7 @@
     url("../../assets/bg-img.png");
   background-size: cover;
   background-position: bottom;
-
+  min-width: min-content;
   height: 100vh;
 }
 
@@ -66,10 +66,11 @@
   align-self: flex-end;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 800px), screen and (max-height: 650px) {
   .auth-page {
-    height: 100%;
+    min-height: 900px;
   }
+
   .content {
     flex-direction: column;
     font-size: 0.8em;
