Página de filme - primeira versão

--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -25,7 +25,7 @@ header {
 
 .pagesLinkContainer {
   display: flex;
-  justifycontent: space-between;
+  justify-content: space-between;
   gap: 20px;
 }
 
