--- a/client/src/components/Auth/Auth.css
+++ b/client/src/components/Auth/Auth.css
@@ -7,8 +7,9 @@
     url("../../assets/bg-img.png");
   background-size: cover;
   background-position: bottom;
-  min-width: min-content;
-  height: 100vh;
+  min-height: 100vh;
+  min-width: max-content;
+  height: 100%;
 }
 
 .content {
@@ -18,6 +19,7 @@
   gap: 3em 1em;
   padding: 0 1em;
   height: 100%;
+  min-height: 100vh;
   box-sizing: border-box;
 }
 
@@ -57,6 +59,7 @@
 .slides p {
   font-size: 3em;
   margin: 0;
+  text-wrap: nowrap;
 }
 
 .auth-container {
@@ -64,18 +67,26 @@
   border-radius: 32px 32px 0 0;
   background-color: white;
   align-self: flex-end;
+  box-sizing: border-box;
 }
 
-@media screen and (max-width: 800px), screen and (max-height: 650px) {
+@media screen and (max-height: 700px) {
+  .content {
+    font-size: 0.8em;
+  }
+}
+
+@media screen and (max-width: 905px), screen and (max-height: 550px) {
   .auth-page {
-    min-height: 900px;
+    min-height: 100vh;
+    height: 100%;
   }
 
   .content {
-    flex-direction: column;
     font-size: 0.8em;
+    flex-direction: column;
     transition: 0.5s;
-    padding: 1em 1em 0 1em;
+    padding: 2em 1em 0 1em;
   }
 
   .logo-container {
@@ -91,5 +102,6 @@
     margin-top: 0;
     align-self: auto;
     height: 100%;
+    min-height: 100vh;
   }
 }
