--- a/client/src/components/Atoms/Button/Button.css
+++ b/client/src/components/Atoms/Button/Button.css
@@ -1,4 +1,4 @@
-button {
+.button-container button {
   cursor: pointer;
   display: flex;
   justify-content: center;
@@ -15,23 +15,23 @@ button {
   min-width: 20em;
 }
 
-button img {
+.button-container button img {
   position: absolute;
   left: 20px;
   width: 1.25em;
   height: 1.25em;
 }
 
-button:hover {
+.button-container button:hover {
   background-color: #f4f2f2;
 }
 
-.dark {
+.button-container .dark {
   background-color: #212121;
   color: #ffffff;
 }
 
-.dark:hover {
+.button-container .dark:hover {
   background-color: #f4f2f2;
   color: #616161;
   transition: 0.15s;
