--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -1,3 +1,31 @@
 .mainContainer {
-  background-color: #1e1e1e;
+  background-color: #121212;
+  min-height: 100vh;
+  color: white;
+}
+
+.background {
+  background: rgba(157, 139, 248, 0.498);
+  filter: blur(18em);
+  border-radius: 52px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  z-index: 0;
+  opacity: 0.5;
+  pointer-events: none;
+}
+
+.foreground {
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2em;
+  box-sizing: border-box;
 }
