--- a/client/src/components/Movie/Movie.css
+++ b/client/src/components/Movie/Movie.css
@@ -202,4 +202,67 @@ h1 {
         flex-direction: row;
         align-items: center;
     }
+
+    .review-button {
+        display: flex;
+        justify-content: flex-end;
+
+        button {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            height: 40px;
+            border: none;
+            border-radius: 10px;
+            padding: 8px 18px;
+            background-color: #A3A3A30D;
+            color: white;
+        }
+
+        button:hover {
+            background-color: #A3A3A326;
+            cursor: pointer;
+        }
+    }
+}
+
+.review-input {
+    gap: 10px;
+
+    textarea {
+        width: 100%;
+        height: 150px;
+        background-color: #A3A3A326;
+        border-color: transparent;
+        border-radius: 4px;
+        box-sizing: border-box; 
+        padding: 4px;
+        color: #C3C3C3;
+        resize: vertical;
+        font-size: 16px;
+        font-weight: 400;
+        font-family: "Roboto", sans-serif;
+    }
+
+    .submit-review {
+        display: flex;
+        justify-content: flex-end;
+
+        button {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            height: 28px;
+            border: none;
+            border-radius: 10px;
+            padding: 8px 18px;
+            background-color: #A3A3A30D;
+            color: white;
+        }
+
+        button:hover {
+            background-color: #A3A3A326;
+            cursor: pointer;
+        }
+    }
 }
