--- a/client/src/components/Atoms/Card/Card.css
+++ b/client/src/components/Atoms/Card/Card.css
@@ -1,18 +1,24 @@
 .card {
-  width: 12.5em;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  padding: 0.7em;
   border-radius: 0.625em;
   overflow: hidden;
   background-color: #a3a3a315;
-  color: #C3C3C3;
-  display: flex;
-  flex-direction: column;
-  padding: 0.7em;
+  color: #c3c3c3;
   transition: transform 0.3s ease;
   cursor: pointer;
+  width: 200px;
+  min-width: 140px;
+  box-sizing: border-box;
 }
 
-.card:hover {
-  transform: scale(1.015);
+.bookmark:hover,
+.card-reviews-button:hover,
+.infoIcon:hover {
+  transform: scale(1.03);
+  transition: transform 0.05s ease;
 }
 
 .imageContainer {
@@ -21,12 +27,8 @@
 
 .bookmark {
   position: absolute;
-  top: 0em;
+  top: 0;
   left: 0.625em;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
 }
 
 .movie-image {
@@ -36,12 +38,12 @@
 }
 
 .movie-details {
-  padding-top: 0.5em;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
 }
 
 .movie-title {
-  font-size: 1.13em;
-  margin: 0.5em 0;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -52,13 +54,12 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
-  padding: 0.5em;
+  gap: 0 0.5em;
 }
 
 .avg-rating {
   display: flex;
   align-items: flex-start;
-  margin-right: 0.5em;
 }
 
 .star-icon {
@@ -68,7 +69,6 @@
 .user-rate {
   display: flex;
   align-items: flex-start;
-  margin-right: 0.5em;
 }
 
 .infoIcon {
@@ -79,17 +79,16 @@
 .card-reviews-button {
   width: 100%;
   padding: 0.5em 0;
-  margin-top: 0.5em;
   border: none;
   border-radius: 0.5em;
   background-color: #a3a3a315;
-  color: #C3C3C3;
+  color: #c3c3c3;
   font-size: 0.875em;
   cursor: pointer;
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  box-shadow: 0px 1px 2px 0px #FFFFFF14 inset;
+  box-shadow: 0px 1px 2px 0px #ffffff14 inset;
 }
 
 .play-icon {
