--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -1,6 +1,8 @@
 .mainContainer {
   background-color: #121212;
   min-height: 100vh;
+  width: 100%;
+  position: relative;
   color: white;
 }
 
@@ -10,12 +12,15 @@
   border-radius: 52px;
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 20%;
   background-size: cover;
   background-position: center;
   z-index: 0;
+  top: 0;
+  left: 0;
   opacity: 0.5;
   pointer-events: none;
+  justify-content: center;
 }
 
 .foreground {
@@ -28,4 +33,8 @@
   justify-content: center;
   padding: 2em;
   box-sizing: border-box;
+}
+
+.card-section-container {
+  width: 100%;
 }
