--- a/client/src/components/Movie/Movie.css
+++ b/client/src/components/Movie/Movie.css
@@ -24,6 +24,26 @@ h1 {
     line-height: 40px;
 }
 
+h2   {
+    color: #C3C3C3;
+    font-family: "Roboto", sans-serif;
+    font-size: 28px;
+    font-weight: 400;
+    line-height: 40px;
+}
+
+.reviews-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    div {
+        background-color: #A3A3A30D;
+        padding: 10px;
+        border-radius: 10px;
+    }
+}
+
 .small-info {
     display: flex;
     justify-content: space-between;
@@ -97,10 +117,15 @@ h1 {
 
     img {
         overflow: hidden;
+        height: 490px;
+    }
+
+    .movie-backdrop {
+       width: auto;
     }
 
     .movie-banner {
-        width: 340px;
+        width:auto;
     }
 }
 
@@ -164,10 +189,11 @@ h1 {
         display: flex;
         flex-direction: row;
         align-items: center;
-        word-break: break-word;
-
+        gap: 75px;
+        
         .plot-text {
             text {
+                word-break: break-word;
                 color: #C3C3C3;
             }
         }
