--- a/client/src/components/Atoms/Card/Card.css
+++ b/client/src/components/Atoms/Card/Card.css
@@ -9,8 +9,8 @@
   color: #c3c3c3;
   transition: transform 0.3s ease;
   cursor: pointer;
-  width: 200px;
-  min-width: 140px;
+  max-width: 200px;
+  min-width: 160px;
   box-sizing: border-box;
 }
 
