--- a/client/src/components/Atoms/Card/Card.css
+++ b/client/src/components/Atoms/Card/Card.css
@@ -7,10 +7,12 @@
   overflow: hidden;
   background-color: #a3a3a315;
   color: #c3c3c3;
+  justify-content: space-between;
   transition: transform 0.3s ease;
   cursor: pointer;
   max-width: 200px;
   min-width: 160px;
+  text-decoration: none;
   box-sizing: border-box;
 }
 
@@ -33,8 +35,9 @@
 
 .movie-image {
   width: 100%;
-  height: auto;
+  object-fit: cover;
   display: block;
+  aspect-ratio: calc(2 / 3);
 }
 
 .movie-details {
@@ -58,6 +61,7 @@
 }
 
 .avg-rating {
+  height: 1.25em;
   display: flex;
   align-items: flex-start;
 }
@@ -67,6 +71,7 @@
 }
 
 .user-rate {
+  height: 1.25em;
   display: flex;
   align-items: flex-start;
 }
