--- a/client/src/components/Movie/Movie.css
+++ b/client/src/components/Movie/Movie.css
@@ -1,305 +1,282 @@
 .movie-page {
-    background-color: #1A1A1A;
+  background-color: #1a1a1a;
 }
 
 .ellipse {
-    background-color: #797979;
-    height: 3px;
-    width: 3px;
-    border-radius: 50%;
+  background-color: #797979;
+  height: 3px;
+  width: 3px;
+  border-radius: 50%;
 }
 
 .movie-container {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    padding: 20px 240px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px 240px;
 }
 
 h1 {
-    color: #C3C3C3;
-    font-family: "Roboto", sans-serif;
-    font-size: 36px;
-    font-weight: 400;
-    line-height: 40px;
+  color: #c3c3c3;
+  font-family: "Roboto", sans-serif;
+  font-size: 36px;
+  font-weight: 400;
+  line-height: 40px;
 }
 
-h2   {
-    color: #C3C3C3;
-    font-family: "Roboto", sans-serif;
-    font-size: 28px;
-    font-weight: 400;
-    line-height: 40px;
-}
-
-.reviews-container {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-
-    div {
-        background-color: #A3A3A30D;
-        padding: 10px;
-        border-radius: 10px;
-    }
-
-    .review {
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
-    }
-
-    .user-name {
-        font-size: 12px;
-        align-self: flex-end;
-    }
+h2 {
+  color: #c3c3c3;
+  font-family: "Roboto", sans-serif;
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 40px;
 }
 
 .small-info {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+
+  .info-container {
     display: flex;
-    justify-content: space-between;
+    align-items: center;
     gap: 10px;
 
-    .info-container {
+    p {
+      color: #797979;
+      font-size: 16px;
+      font-weight: 400;
+      font-family: "Roboto", sans-serif;
+    }
+  }
+
+  .right-side {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+
+    .buttons-container {
+      display: flex;
+      gap: 10px;
+
+      button {
         display: flex;
         align-items: center;
         gap: 10px;
+        height: 40px;
+        border: none;
+        border-radius: 10px;
+        padding: 8px 18px;
+        background-color: #a3a3a30d;
+        color: white;
+      }
 
-        text {
-            color: #797979;
-            font-size: 16px;
-            font-weight: 400;
-            font-family: "Roboto", sans-serif;
-        }
+      button:hover {
+        background-color: #a3a3a326;
+        cursor: pointer;
+      }
     }
 
-    .right-side {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 10px;
+    .rating-buttons {
+      display: flex;
+      flex-direction: row;
+      gap: 4px;
 
-        .buttons-container {
-            display: flex ;
-            gap : 10px;
-    
-            button {
-                display: flex;
-                align-items: center;
-                gap: 10px;
-                height: 40px;
-                border: none;
-                border-radius: 10px;
-                padding: 8px 18px;
-                background-color: #A3A3A30D;
-                color: white;
-            }
-    
-            button:hover {
-                background-color: #A3A3A326;
-                cursor: pointer;
-            }
-        }
-    
-        .rating-buttons {
-            display: flex;
-            flex-direction: row;
-            gap: 4px;
-    
-            button {
-                border: none;
-                border-radius: 45px;
-                padding: 4px 8px;
-                background-color: #A3A3A30D;
-                color: white;
-            }
+      button {
+        border: none;
+        border-radius: 45px;
+        padding: 4px 8px;
+        background-color: #a3a3a30d;
+        color: white;
+      }
 
-            button:hover {
-                background-color: #A3A3A326;
-                cursor: pointer;
-            }
-        }
+      button:hover {
+        background-color: #a3a3a326;
+        cursor: pointer;
+      }
     }
+  }
 }
 
 .movie-images {
-    display: flex;
-    gap: 24px;
+  display: flex;
+  gap: 24px;
 
-    img {
-        overflow: hidden;
-        object-fit: cover;
-    }
+  img {
+    overflow: hidden;
+    object-fit: cover;
+  }
 
-    .movie-backdrop {
-       width: auto;
-    }
+  .movie-backdrop {
+    width: auto;
+  }
 
-    .movie-banner {
-        width:auto;
-    }
+  .movie-banner {
+    width: auto;
+  }
 }
 
 .movie-info {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  .h5-container {
+    width: 150px;
+  }
+
+  p {
+    color: #c3c3c3;
+    font-size: 16px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+  }
+
+  .names-text {
     display: flex;
-    flex-direction: column;
-    gap: 20px;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
 
-    .h5-container {
-        width: 150px;
+    p {
+      color: #d8c882;
     }
+  }
 
-    text {
-        color: #C3C3C3;
-        font-size: 16px;
-        font-family: "Roboto", sans-serif;
-        font-weight: 400;
-    }
+  .ellipse {
+    color: white;
+  }
 
-    .names-text {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
+  .genre {
+    display: flex;
+    align-items: center;
+
+    .genre-buttons {
+      display: flex;
+      flex-direction: row;
+      gap: 10px;
+
+      button {
+        border: none;
         gap: 10px;
-
-        text {
-            color: #D8C882;
-        }
-    }
-
-    .ellipse {
+        border-radius: 45px;
+        padding: 8px 18px;
+        background-color: #a3a3a326;
         color: white;
+      }
+
+      button:hover {
+        background-color: #a3a3a30d;
+        cursor: pointer;
+      }
+    }
+  }
+
+  .plot {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 100px;
+
+    .plot-text {
+      p {
+        word-break: break-word;
+        color: #c3c3c3;
+      }
+    }
+  }
+
+  .director {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    .director-text {
+      p {
+        color: #d8c882;
+      }
+    }
+  }
+
+  .writers {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .stars {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .awards {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .review-button {
+    display: flex;
+    justify-content: flex-end;
+
+    button {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      height: 40px;
+      border: none;
+      border-radius: 10px;
+      padding: 8px 18px;
+      background-color: #a3a3a30d;
+      color: white;
     }
 
-    .genre {
-        display: flex;
-        align-items: center;
-
-        .genre-buttons {
-            display: flex;
-            flex-direction: row;
-            gap: 10px;
-
-            button {
-                border: none;
-                gap: 10px;
-                border-radius: 45px;
-                padding: 8px 18px;
-                background-color: #A3A3A326;
-                color: white;
-            }
-
-            button:hover {
-                background-color: #A3A3A30D;
-                cursor: pointer;
-            }
-        }
+    button:hover {
+      background-color: #a3a3a326;
+      cursor: pointer;
     }
-
-    .plot {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        gap: 100px;
-        
-        .plot-text {
-            text {
-                word-break: break-word;
-                color: #C3C3C3;
-            }
-        }
-    }
-
-    .director {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-
-        .director-text {
-            text {
-                color: #D8C882;
-            }
-        }
-    }
-
-    .writers {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-    }
-
-    .stars {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-    }
-
-    .awards {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-    }
-
-    .review-button {
-        display: flex;
-        justify-content: flex-end;
-
-        button {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            height: 40px;
-            border: none;
-            border-radius: 10px;
-            padding: 8px 18px;
-            background-color: #A3A3A30D;
-            color: white;
-        }
-
-        button:hover {
-            background-color: #A3A3A326;
-            cursor: pointer;
-        }
-    }
+  }
 }
 
 .review-input {
-    gap: 10px;
+  gap: 10px;
 
-    textarea {
-        width: 100%;
-        height: 150px;
-        background-color: #A3A3A326;
-        border-color: transparent;
-        border-radius: 4px;
-        box-sizing: border-box; 
-        padding: 4px;
-        color: #C3C3C3;
-        resize: vertical;
-        font-size: 16px;
-        font-weight: 400;
-        font-family: "Roboto", sans-serif;
+  textarea {
+    width: 100%;
+    height: 150px;
+    background-color: #a3a3a326;
+    border-color: transparent;
+    border-radius: 4px;
+    box-sizing: border-box;
+    padding: 4px;
+    color: #c3c3c3;
+    resize: vertical;
+    font-size: 16px;
+    font-weight: 400;
+    font-family: "Roboto", sans-serif;
+  }
+
+  .submit-review {
+    display: flex;
+    justify-content: flex-end;
+
+    button {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      height: 28px;
+      border: none;
+      border-radius: 10px;
+      padding: 8px 18px;
+      background-color: #a3a3a30d;
+      color: white;
     }
 
-    .submit-review {
-        display: flex;
-        justify-content: flex-end;
-
-        button {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            height: 28px;
-            border: none;
-            border-radius: 10px;
-            padding: 8px 18px;
-            background-color: #A3A3A30D;
-            color: white;
-        }
-
-        button:hover {
-            background-color: #A3A3A326;
-            cursor: pointer;
-        }
+    button:hover {
+      background-color: #a3a3a326;
+      cursor: pointer;
     }
+  }
 }
